<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:background="@color/bg_screen1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/doctor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slide_1_title"
            android:textColor="#000"
            android:textSize="21dp"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slide_1_sub_title"
            android:textColor="#000"
            android:textSize="21dp"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:fontFamily="@font/montserrat"
            android:text="@string/slide_1_desc"
            android:textAlignment="center"
            android:textSize="@dimen/slide_desc"
            android:gravity="center_horizontal" />

    </LinearLayout>
</RelativeLayout>